[package]
name = "mir-sys"
version = "0.1.0"
description = "Low-level FFI bindings to the Mir compositor's miral C++ library"
license = "GPL-2.0-or-later"
repository = "https://github.com/canonical/mir"
readme = "README.md"
keywords = ["mir", "wayland", "compositor", "ffi", "bindings"]
categories = ["external-ffi-bindings", "gui"]
links = "miral"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
pkg-config = "0.3"
